fix footer on studentpage, attempt on mediaq, z-index dfb and fix backgroundcolor

--- a/style/cardstyle.css
+++ b/style/cardstyle.css
@@ -4,7 +4,33 @@
   justify-content: space-around;
   max-width: 1280px;
   margin: 0 auto;
+	align-items: baseline;
 }
+
+@media (max-width: 1920px) {
+
+  }
+}
+
+@media (max-width: 1280px) {
+
+  }
+}
+
+@media screen and (max-width: 450px) {
+	.card-bottom {
+		display: flex;
+	  height: auto;
+	  margin: 10px;
+	  justify-content: flex-end;
+	  flex-direction: column;
+	}
+
+	.card-body {
+		background-color: yellow;
+	}
+}
+
 
 .box>h1 {
   display: flex;
@@ -29,9 +55,8 @@
   width: auto;
   height: auto;
   flex-direction: column;
-  min-width: 200px;
-  min-height: 200px;
-  max-width: 400px;
+  min-width: 350px;
+  max-width: 350px;
 }
 
 .card-img-top {
@@ -56,7 +81,7 @@
   list-style: none;
 }
 
-.card-list>li>a, h3>a {
+.card-list>li>a, h3>a, .expand>li>a {
   color: black;
   text-decoration: none;
 }
@@ -138,11 +163,6 @@
   background: #ff5f52;
   text-transform: uppercase;
 }
-
-/*button{
-  position: relative;
-  overflow: hidden;
-}*/
 
 .cardbutton:after {
   content: '';
